add product page

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -43,7 +43,6 @@ input[type=password]
     padding: 10px;
     font-size: 16px;
     border: 1px solid var(--color--2);
-    margin: 5px;
     outline: none;
     background: #fff;
     width: 100%;
@@ -63,4 +62,23 @@ input[type=email]:focus,
 input[type=password]:focus
 {
     outline: var(--color--3) solid 1px;
+}
+
+.money{
+    position: relative;
+}
+
+.money span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 8px;
+    width: 35px;
+}
+
+.money input{
+    padding-left: 35px;
 }
