--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -82,3 +82,10 @@ input[type=password]:focus
 .money input{
     padding-left: 35px;
 }
+
+.scrollbar-hide{
+    scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar{
+    display: none;
+}
