--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -27,6 +27,14 @@ i {
     justify-content: center;
 }
 
+.hide {
+    display: none;
+}
+
+.show {
+    display: flex;
+}
+
 .scrollbar-dark::-webkit-scrollbar {
     width: 8px;
     height: 8px;
